<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/welcome_back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Back!"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@android:color/white"
        android:shadowColor="@color/grey_violet"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/material_dynamic_neutral20"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_white_box"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_box"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/username_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <TextView
        android:id="@+id/forgot_username_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Username?"
        android:textColor="?android:attr/textColorLink"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="@+id/password_text" />

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="?android:attr/textColorLink"
        android:fontFamily="@font/poppins_light"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_username_link"
        app:layout_constraintStart_toStartOf="@+id/forgot_username_link"/>

    <Button
        android:id="@+id/create_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textColor="@color/grey_violet"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>